--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,4 @@
 ---
-# defaults file for ansible-mariadb
+mariadb_bind_address: "127.0.0.1"
+ufw_mariadb_public: false
+mariadb_install_client: false
