--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,20 @@
 ---
-# tasks file for ansible-mariadb
+- name: Setting up repositories
+  include: "repositories.yml"
+  become: true
+
+- name: Installing common packages 
+  include: "packages-common.yml"
+  become: true
+
+- name: Installing mariadb server
+  include: "packages-server.yml"
+  become: true
+
+- name: Setting up repositories
+  include: "databases.yml"
+  become: true
+
+- name: Punch hole in firewall
+  include: "ufw.yml"
+  become: true
