--- a/tasks/databases.yml
+++ b/tasks/databases.yml
@@ -2,7 +2,7 @@
   mysql_user:
     name: root
     password: "{{ mysql_root_password }}"
-    login_password: "{{ mysql_root_password }}"
+    login_password: "{{ mysql_old_root_password }}"
     host: localhost
     priv: '*.*:ALL,GRANT'
     state: present
