Change to python3

--- a/tasks/packages-common.yml
+++ b/tasks/packages-common.yml
@@ -4,7 +4,8 @@
     state: present
   vars:
     packages:
-    - python-mysqldb
+    - python3
+    - python3-pymysql
   tags:
     - apt
     - db
