--- a/tasks/databases.yml
+++ b/tasks/databases.yml
@@ -7,6 +7,11 @@
     priv: '*.*:ALL,GRANT'
     state: present
     check_implicit_admin: yes
+  no_log: true
+  tags:
+    - db
+    - mariadb
+    - deploy
 
 - name: create a database
   mysql_db:
@@ -15,6 +20,7 @@
     encoding: utf8
     login_password: "{{ mysql_root_password }}"
   with_items: "{{ mysql_databases }}"
+  no_log: true
   tags:
     - db
     - mariadb
@@ -29,6 +35,7 @@
     state: present
     login_password: "{{ mysql_root_password }}"
   with_items: "{{ mysql_databases }}"
+  no_log: true
   tags:
     - db
     - mariadb
