--- a/tasks/repositories.yml
+++ b/tasks/repositories.yml
@@ -11,7 +11,7 @@
 - name: Setting up repositories
   apt_repository: "repo='{{ item }}' state=present"
   with_items:
-  - deb [arch=amd64,i386,ppc64el] http://mirror2.hs-esslingen.de/mariadb/repo/10.1/{{ ansible_distribution|lower() }} {{ ansible_distribution_release }} main
+  - deb [arch=amd64] http://mirror2.hs-esslingen.de/mariadb/repo/10.1/{{ ansible_distribution|lower() }} {{ ansible_distribution_release }} main
   tags:
     - db
     - mariadb
